[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/scene_manager/scene_manager.gd" type="Script" id=1]
[ext_resource path="res://scenes/titlescreen/titlescreen.tscn" type="PackedScene" id=2]

[node name="SceneManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CurrentScene" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Titlescreen" parent="CurrentScene" instance=ExtResource( 2 )]

[node name="FreedScenes" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
